[package]
name = "cosmian_std"
version = "0.1.2"
authors = ["Benjamin Coenen <benjamin.coenen@cosmian.com>"]
edition = "2018"
description = "Cosmian std lib to write Rust MPC programs with easier abstractions and helpers"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/cosmian_std"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { package = "scale-core", version = "0.1.1" }
scale_std = { version = "0.1.0" }

# Need for emulation mode
serde_json = { version = "1.0.61", optional = true }
once_cell = { version = "1.5.2", optional = true }

[features]
emulate = ["scale/emulate", "scale_std/emulate", "serde_json", "once_cell"]
